--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=sb-ecom
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password="Anki@123"
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 project.image=images/
 
